Creacion pagina restaurantes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">SanRafa</string>
+    <string name="titulohomehoteles">Hoteles en Manaure</string>
+    <string name="descripcionhomehoteles">En nuestro pueblo encontraras desde 35000 COP hasta las
+        lujosas cabañas dotadas de todos los elementos para promover un descanso restaurador</string>
+    <string name="botonhomehoteles">Ver hoteles</string>
+
+    <string name="titulohomerestaurantes">Restaurantes en Manaure</string>
+    <string name="descripcionrestaurantes">Debido a que el departamento de La Guajira integra sabores
+        de diferentes partes del mundo y la variedad de insumos locales para a su cocina, se puede
+        asegurar que los visitantes quedarán enamorados de la culinaria guajira. </string>
 </resources>
