--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,6 +15,26 @@
         parties du monde ainsi que de la variété des ingrédients locaux utilisés dans sa cuisine,
         il est possible d'affirmer que les visiteurs tomberont amoureux de la cuisine guajira.</string>
 
+    <string name="titulohomesitios">sites touristiques</string>
+    <string name="descripcionresitios">Parce que le département de La Guajira intègre les saveurs
+         provenant de différentes parties du monde et la variété des intrants locaux pour votre cuisine, vous pouvez
+         assurez-vous que les visiteurs tomberont amoureux de la cuisine de Guajira.</string>
+
+    <string name="nombre">Julian Vanegas Calle</string>
+    <string name="acercaDe">Diseñador gráco, animador 3D y actualmente
+en proceso de formación como Técnico en
+Desarrollo de Software. Combino la creatividad
+visual con conocimientos técnicos para crear
+experiencias únicas. Mi perl abarca desde el
+
+diseño gráco hasta la programación, destacán-
+dome en el área de desarrollo Front end. Poseo
+
+competencias laborales de dinamismo, creativi-
+dad y atención al detalle, fundamentales para
+
+impulsar proyectos hacia el siguiente nivel.</string>
+
     <string name="opcion1">Anglais</string>
     <string name="opcion2">Espagnol</string>
     <string name="opcion3"> Français</string>
