Se agrego información a los adpatadores

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,6 +14,7 @@
     <string name="descripcionrestaurantes">"En raison de la diversité des saveurs provenant de différentes
         parties du monde ainsi que de la variété des ingrédients locaux utilisés dans sa cuisine,
         il est possible d'affirmer que les visiteurs tomberont amoureux de la cuisine guajira.</string>
+    <string name="botonhomerestaurantes">voir les restaurants</string>
 
     <string name="titulohomesitios">sites touristiques</string>
     <string name="descripcionresitios">Parce que le département de La Guajira intègre les saveurs
