--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="descripcionrestaurantes">Debido a que el departamento de La Guajira integra sabores
         de diferentes partes del mundo y la variedad de insumos locales para a su cocina, se puede
         asegurar que los visitantes quedarán enamorados de la culinaria guajira. </string>
+    <string name="botonhomerestaurantes">Ver Restaurantes</string>
 
     <string name="nombre">Julian Vanegas Calle</string>
     <string name="acercaDe">Diseñador gráco, animador 3D y actualmente
