--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,6 +14,7 @@
     <string name="descripcionrestaurantes">Due to La Guajira department integrating flavours from different
         parts of the world and the variety of local ingredients for its cuisine, it can be ensured
         that visitors will fall in love with Guajiras culinary delights. </string>
+    <string name="botonhomerestaurantes">see Restaurants</string>
 
     <string name="titulohomesitios">tourist sites</string>
     <string name="descripcionresitios">The stillness of the blue and clear skies of the Guajira peninsula,
